--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@ng-bootstrap/ng-bootstrap": "^14.1.0",
     "@popperjs/core": "^2.11.6",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.3.0-alpha3",
     "jquery": "^3.6.4",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
